# robotarm_kinematic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: test.cpp
include/: robotarm_kinematic.h  robotarm_parameters.h
src/: robotarm_kinematic.cpp
